tests/compile-fail/derive_struct_no_location.stderr
error: StackError requires a 'location' field of type Location
 --> tests/compile-fail/derive_struct_no_location.rs:6:16
  |
6 |   struct MyError {
  |  ________________^
7 | |     message: String,
8 | | }
  | |_^
